ignore words spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.ignoreWords": [
         "bulmaswatch",
         "esbuild",
+        "fontawesome",
+        "fortawesome",
         "immer",
         "wasm"
     ]
