--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.ignoreWords": [
         "bulmaswatch",
+        "cocell",
         "esbuild",
         "fontawesome",
         "fortawesome",
